--- a/style.css
+++ b/style.css
@@ -10,17 +10,26 @@ html {
 
 nav {
   background-color: #006475;
+  border: 4px solid #0e353d;
+}
+
+nav img {
+  width: 70px;
+  height: 70px;
 }
 
 nav ul {
   list-style: none;
   display: grid;
+  grid-row: 1;
   font-size: 3rem;
   padding: 2rem;
 }
 
 nav li {
   grid-row: 2;
+  display: flex;
+  align-items: center;
 }
 
 nav a {
