--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  background: #659099;
+  display: grid;
+}
+
 nav {
+  grid-row: 1;
+  grid-column: 1;
   background-color: #006475;
   border: 4px solid #0e353d;
 }
@@ -24,16 +31,52 @@ nav ul {
   grid-row: 1;
   font-size: 3rem;
   padding: 2rem;
+  grid-template-columns: 9vw auto auto auto auto;
 }
 
 nav li {
-  grid-row: 2;
+  grid-row: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 nav a {
   color: white;
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.products-nav {
+  background-color: #006321;
+  border: 3px solid lightgreen;
+}
+
+.products-nav ul {
+  display: grid;
+  grid-row: 2;
+  font-size: 2.5rem;
+  padding: 1rem;
+  grid-template-columns: auto;
+}
+
+.products-nav li {
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.products-nav a {
+  color: rgb(187, 238, 187);
+  text-decoration: none;
+  font-family: Calibri;
+}
+
+.sale-article {
+  background-color: #006475;
+}
+
+footer {
+  background-color: #006475;
 }
