--- a/style.css
+++ b/style.css
@@ -180,5 +180,5 @@ article p {
   align-self: center;
   color: white;
   background-color: #006321;
-  border-radius: 2px
+  border-radius: 2px;
 }
