--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ article p {
 .socials-footer ul {
   list-style: none;
   display: grid;
+  grid-row-gap: 20px;
 }
 
 .socials-footer li {
@@ -139,17 +140,35 @@ article p {
   padding: 2rem;
 }
 
+.title-header {
+  grid-row: 3;
+  grid-column: 1;
+  background-color: #659099;
+}
+
+.title-header h2 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 5rem;
+  text-align: center;
+  color: white;
+  margin-top: 50px;
+}
+
 .product-page-options {
   display: grid;
 }
 
 .product-page-options ul {
+  margin-top: 50px;
+  margin-bottom: 50px;
   list-style: none;
   display: grid;
 }
 
 .product-page-options li {
   display: grid;
+  grid-template-rows: auto auto 0px;
+  row-gap: 40px;
   justify-self: center;
 }
 
@@ -160,7 +179,7 @@ article p {
   border: 4px solid #0e353d;
 }
 
-.product-page-options button {
+.product-page-options button, .product-page-options a{
   grid-row: 2;
   grid-column: 1;
 }
@@ -175,10 +194,43 @@ article p {
   grid-column: 2;
 }
 
-.product-page-options button {
+.product-page-options li:nth-child(3) {
+  grid-row: 1;
+  grid-column: 3;
+}
+
+.product-page-options li:nth-child(4) {
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.product-page-options button, .product-page-options a {
   justify-self: center;
   align-self: center;
   color: white;
-  background-color: #006321;
-  border-radius: 2px;
+  background-color: #017929;
+  border-radius: 4px;
+  border: none;
+  width: 90px;
+  height: 40px;
+  font-size: 1.4rem;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.product-page-options a {
+  text-decoration: none;
+  text-align: center;
+  line-height: 40px;
+}
+
+.product-listing-title-section {
+  background-color: #659099;
+}
+
+.product-listing-title-section h2 {
+  color: white;
+  font-size: 5rem;
+  text-align: center;
+  margin: 4rem;
+  font-family: Calibri;
 }
