--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
   font-size: 62.5%;
 }
 
-
 body {
   background: #659099;
   display: grid;
@@ -150,7 +149,7 @@ article p {
 }
 
 .title-header h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 5rem;
   text-align: center;
   color: white;
@@ -160,7 +159,6 @@ article p {
 .product-page-options {
   display: grid;
 }
-
 
 .product-page-options ul {
   margin-top: 50px;
@@ -183,7 +181,8 @@ article p {
   border: 4px solid #0e353d;
 }
 
-.product-page-options button, .product-page-options a{
+.product-page-options button,
+.product-page-options a {
   grid-row: 2;
   grid-column: 1;
 }
@@ -208,7 +207,8 @@ article p {
   grid-column: 1;
 }
 
-.product-page-options button, .product-page-options a {
+.product-page-options button,
+.product-page-options a {
   justify-self: center;
   align-self: center;
   background-color: #017929;
@@ -217,7 +217,7 @@ article p {
   width: 90px;
   height: 40px;
   font-size: 1.4rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
   font-weight: bold;
 }
@@ -264,10 +264,11 @@ article p {
   grid-row: 1;
 }
 
-.breadcrumbs a , p{
+.breadcrumbs a,
+p {
   color: white;
   font-size: 2rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .product-listing-section {
@@ -330,7 +331,7 @@ article p {
 
 .filters-section label {
   color: white;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 2rem;
   margin: 0 5px;
 }
@@ -339,4 +340,3 @@ article p {
   grid-row: 5;
   grid-column: 1 / span 2;
 }
-
