--- a/style.css
+++ b/style.css
@@ -207,7 +207,6 @@ article p {
   grid-column: 1;
 }
 
-.product-page-options button,
 .product-page-options a {
   justify-self: center;
   align-self: center;
@@ -275,7 +274,6 @@ p {
   grid-row: 4;
   grid-column: 2;
   background-color: #659099;
-  height: 1000px;
   border-top: 4px solid #0e353d;
   border-right: 4px solid #0e353d;
 }
@@ -290,12 +288,69 @@ p {
 
 .product-listing-section ul {
   list-style: none;
+  display: grid;
+}
+
+.product-listing-section li {
+  justify-self: center;
+  display: grid;
+}
+
+.product-listing-section img {
+  grid-column: 1;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border: 4px solid #0e353d;
+}
+
+.product-listing-section a {
+  justify-self: center;
+  align-self: center;
+  background-color: #017929;
+  border-radius: 4px;
+  border: none;
+  width: 90px;
+  height: 40px;
+  font-size: 1.4rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.product-listing-section li:nth-child(1) {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.product-listing-section li:nth-child(2) {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.product-listing-section li:nth-child(3) {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.product-listing-section li:nth-child(4) {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.product-listing-section li:nth-child(5) {
+  grid-column: 1;
+  grid-row: 3;
+}
+.product-listing-section li:nth-child(6) {
+  grid-column: 2;
+  grid-row: 3;
 }
 
 .filters-section {
   grid-row: 4;
   grid-column: 1;
-  height: 1000px;
   border-right: 4px solid #0e353d;
   border-top: 4px solid #0e353d;
   border-left: 4px solid #0e353d;
@@ -313,6 +368,7 @@ p {
   font-size: 3rem;
   margin: 2rem;
   font-family: Calibri;
+  display: grid;
 }
 
 #filters-title {
@@ -320,8 +376,8 @@ p {
 }
 
 .filter-option {
-  display: inline-block;
-  margin: 10px 100px;
+  margin: 10% 0% 10% 15%;
+  grid-column: 1;
 }
 
 .filters-section input {
