--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ nav ul {
   display: grid;
   grid-row: 1;
   font-size: 3rem;
-  padding: 2rem;
   grid-template-columns: 9vw auto auto auto auto;
 }
 
@@ -39,7 +38,6 @@ nav li {
 nav img {
   width: 100px;
   height: 100px;
-  padding: none;
 }
 
 nav a {
@@ -74,6 +72,12 @@ nav a {
   font-family: Calibri;
 }
 
+.kitchen-image-section img {
+  object-fit: cover;
+  width: 100%;
+  height: 600px;
+}
+
 article {
   grid-row: 3;
   background-color: #659099;
@@ -93,8 +97,8 @@ article p {
   color: white;
   font-size: 2rem;
   text-align: center;
-  margin: 6rem;
   font-family: Calibri;
+  padding-bottom: 100px;
 }
 
 .sale-article {
@@ -105,12 +109,14 @@ article p {
   grid-row: 4;
 }
 
-.kitchen-image-section img {
-  object-fit: cover;
+.electronics-image-section {
+  grid-row: 5;
 }
 
-.our-mission-article {
-  grid-row: 5;
+.electronics-image-section img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
 
 .employee-welfare-article {
